- abstracted a camerra class

--- a/Quixel Renderer.vcxproj
+++ b/Quixel Renderer.vcxproj
@@ -155,7 +155,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="debugging.cpp" />
+    <ClCompile Include="camera.cpp" />
     <ClCompile Include="indexbuffer.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="renderer.cpp" />
@@ -166,10 +166,12 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="callbacks.h" />
+    <ClInclude Include="camera.h" />
     <ClInclude Include="debugging.h" />
     <ClInclude Include="globals.h" />
     <ClInclude Include="indexbuffer.h" />
     <ClInclude Include="inputstate.h" />
+    <ClInclude Include="main.h" />
     <ClInclude Include="renderer.h" />
     <ClInclude Include="shader.h" />
     <ClInclude Include="texture.h" />
