--- a/Quixel Renderer.vcxproj.filters
+++ b/Quixel Renderer.vcxproj.filters
@@ -91,6 +91,9 @@
     <ClInclude Include="boid.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="raycast.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="normal.shader">
