- fixed quadtree raycast bug, one of triangles was incorrect - created a single query raycast function

--- a/Quixel Renderer.vcxproj
+++ b/Quixel Renderer.vcxproj
@@ -195,6 +195,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="basic.shader" />
+    <None Include="ClassDiagram.cd" />
     <None Include="normal.shader" />
     <None Include="instanced_normal.shader" />
   </ItemGroup>
