- reset on enter - nicer looking octree - visualized raycasting (temporary)

--- a/Quixel Renderer.vcxproj
+++ b/Quixel Renderer.vcxproj
@@ -198,6 +198,7 @@
     <None Include="ClassDiagram.cd" />
     <None Include="normal.shader" />
     <None Include="instanced_normal.shader" />
+    <None Include="Rendering Pipeline.drawio.pdf" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="GojoTexture256x256.png" />
