- abstracted a window class - abstracted some boiler plate code into functions in main() - refactored and updated a few old classes to be more versatile for an engine
- need to redesign renderer! maybe get rid of it, and instead just have a scene.

--- a/Quixel Renderer.vcxproj.filters
+++ b/Quixel Renderer.vcxproj.filters
@@ -47,6 +47,9 @@
     <ClCompile Include="boid.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="window.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="indexbuffer.h">
@@ -92,6 +95,18 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="raycast.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="randomranges.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="boidbehavior.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="prefabs.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="window.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
