--- a/Quixel Renderer.vcxproj
+++ b/Quixel Renderer.vcxproj
@@ -175,6 +175,7 @@
     <ClCompile Include="texture.cpp" />
     <ClCompile Include="vertexarray.cpp" />
     <ClCompile Include="vertexbuffer.cpp" />
+    <ClCompile Include="window.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="callbacks.h" />
@@ -182,9 +183,12 @@
     <ClInclude Include="debugging.h" />
     <ClInclude Include="globals.h" />
     <ClInclude Include="boid.h" />
+    <ClInclude Include="boidbehavior.h" />
     <ClInclude Include="indexbuffer.h" />
     <ClInclude Include="inputstate.h" />
     <ClInclude Include="octree.h" />
+    <ClInclude Include="prefabs.h" />
+    <ClInclude Include="randomranges.h" />
     <ClInclude Include="raycast.h" />
     <ClInclude Include="renderer.h" />
     <ClInclude Include="shader.h" />
@@ -192,6 +196,7 @@
     <ClInclude Include="vertexarray.h" />
     <ClInclude Include="vertexbuffer.h" />
     <ClInclude Include="vertexbufferlayout.h" />
+    <ClInclude Include="window.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="basic.shader" />
