--- a/Quixel Renderer.vcxproj
+++ b/Quixel Renderer.vcxproj
@@ -165,13 +165,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="boid.cpp" />
     <ClCompile Include="camera.cpp" />
     <ClCompile Include="indexbuffer.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="mesh.cpp" />
-    <ClCompile Include="octree.cpp" />
-    <ClCompile Include="renderer.cpp" />
+    <ClCompile Include="engine.cpp" />
     <ClCompile Include="shader.cpp" />
     <ClCompile Include="texture.cpp" />
     <ClCompile Include="vertexarray.cpp" />
@@ -183,21 +180,11 @@
     <ClInclude Include="camera.h" />
     <ClInclude Include="debugging.h" />
     <ClInclude Include="globals.h" />
-    <ClInclude Include="boid.h" />
-    <ClInclude Include="boidbehavior.h" />
     <ClInclude Include="indexbuffer.h" />
     <ClInclude Include="inputstate.h" />
-    <ClInclude Include="mesh.h" />
-    <ClInclude Include="object.h" />
-    <ClInclude Include="octree.h" />
-    <ClInclude Include="prefabs.h" />
-    <ClInclude Include="randomranges.h" />
-    <ClInclude Include="raycast.h" />
-    <ClInclude Include="renderer.h" />
-    <ClInclude Include="scene.h" />
+    <ClInclude Include="engine.h" />
     <ClInclude Include="shader.h" />
     <ClInclude Include="texture.h" />
-    <ClInclude Include="vectorextras.h" />
     <ClInclude Include="vertexarray.h" />
     <ClInclude Include="vertexbuffer.h" />
     <ClInclude Include="vertexbufferlayout.h" />
@@ -212,6 +199,7 @@
   </ItemGroup>
   <ItemGroup>
     <Image Include="GojoTexture256x256.png" />
+    <Image Include="jojo.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
