--- a/Quixel Renderer.vcxproj.filters
+++ b/Quixel Renderer.vcxproj.filters
@@ -23,7 +23,7 @@
     <ClCompile Include="indexbuffer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="renderer.cpp">
+    <ClCompile Include="engine.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="shader.cpp">
@@ -44,16 +44,7 @@
     <ClCompile Include="camera.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="octree.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="boid.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="window.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="mesh.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -61,7 +52,7 @@
     <ClInclude Include="indexbuffer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="renderer.h">
+    <ClInclude Include="engine.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="shader.h">
@@ -94,37 +85,7 @@
     <ClInclude Include="vertexbufferlayout.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="octree.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="boid.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="raycast.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="randomranges.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="boidbehavior.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="prefabs.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="window.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="scene.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="object.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="mesh.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="vectorextras.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -143,6 +104,9 @@
   </ItemGroup>
   <ItemGroup>
     <Image Include="GojoTexture256x256.png">
+      <Filter>Textures</Filter>
+    </Image>
+    <Image Include="jojo.png">
       <Filter>Textures</Filter>
     </Image>
   </ItemGroup>
