--- a/Quixel Renderer.vcxproj
+++ b/Quixel Renderer.vcxproj
@@ -167,10 +167,9 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="camera.cpp" />
-    <ClCompile Include="camera2d.cpp" />
     <ClCompile Include="indexbuffer.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="quixel2d.cpp" />
+    <ClCompile Include="quixel.cpp" />
     <ClCompile Include="shader.cpp" />
     <ClCompile Include="texture.cpp" />
     <ClCompile Include="vertexarray.cpp" />
@@ -180,14 +179,13 @@
   <ItemGroup>
     <ClInclude Include="callbacks.h" />
     <ClInclude Include="camera.h" />
-    <ClInclude Include="camera2d.h" />
+    <ClInclude Include="color.h" />
     <ClInclude Include="debugging.h" />
     <ClInclude Include="globals.h" />
     <ClInclude Include="indexbuffer.h" />
     <ClInclude Include="inputstate.h" />
-    <ClInclude Include="quixel2d.h" />
+    <ClInclude Include="quixel.h" />
     <ClInclude Include="shader.h" />
-    <ClInclude Include="sprite.h" />
     <ClInclude Include="texture.h" />
     <ClInclude Include="vertexarray.h" />
     <ClInclude Include="vertexbuffer.h" />
@@ -195,14 +193,8 @@
     <ClInclude Include="window.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="basic.shader" />
-    <None Include="ClassDiagram.cd" />
-    <None Include="normal.shader" />
-    <None Include="instanced_normal.shader" />
-    <None Include="packages.config" />
-    <None Include="quixel2dblock.shader" />
-    <None Include="quixel2dtex.shader" />
-    <None Include="Rendering Pipeline.drawio.pdf" />
+    <None Include="bucket.shader" />
+    <None Include="tex.shader" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="GojoTexture256x256.png" />
